--- a/youtube.html
+++ b/youtube.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube</title>
     <style>
+        * {
+            margin: 0px;
+            padding: 0px;
+        }
 
+        img {
+
+        }
+
+        a{
+
+        }
     </style>
 </head>
 <body>
