--- a/facebook.html
+++ b/facebook.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Facebook</title>
     <link rel="stylesheet" href="estilos/social.css">
-    <title>Youtube</title>
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="Youtube">
-    <a href="https://www.youtube.com/@Myn-1501" target="_blank">ACESSE</a>
+    <img src="imagens/tela-facebook.jpg" alt="Facebook">
+    <a href="https://www.facebook.com/profile.php?id=100024481261740" target="_blank">ACESSE</a>
 </body>
 </html>
