--- a/youtube.html
+++ b/youtube.html
@@ -7,7 +7,7 @@
     <title>Youtube</title>
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="Youtube">
+    <img src="imagens/youtube-da-myn.jpeg" alt="Youtube">
     <a href="https://www.youtube.com/@Myn-1501" target="_blank">ACESSE</a>
 </body>
 </html>
