--- a/facebook.html
+++ b/facebook.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-facebook.jpg" alt="Facebook">
+    <img src="imagens/tela-instagram-myn.jpg" alt="Facebook">
     <a href="https://www.facebook.com/profile.php?id=100024481261740" target="_blank">ACESSE</a>
 </body>
 </html>
