--- a/instagram.html
+++ b/instagram.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="Instagram">
+    <img src="imagens/instagram-da-myn.jpeg" alt="Instagram">
     <a href="https://www.instagram.com/mynzin_.xxs/">ACESSE</a>
 </body>
 </html>
