--- a/x.html
+++ b/x.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css"s>
 </head>
 <body>
-    <img src="imagens/tela-twitter.jpg" alt="X">
+    <img src="imagens/x-myn.jpeg" alt="X">
     <a href="https://x.com/eu_sla_mn_KKKKK" target="_blank">ACESSE</a>
 </body>
 </html>
